2011-06-08 (#547)
- duplicate patterns with apostrophes in plan text files
- fix a bug in conversion of greek patterns into plain text files (no apostrophe replacement)

2011-06-08 (#545, #546)
- restore two version of plain text patterns for Serbian
  and load 'sh' patterns by default also for Cyrillic script

2011-06-08 (#544)
- a section in documentation about using hyphenation patterns in TeX

2011-06-08 (#543)
- temporary remove Greek patterns for 8-bit engines (will be added later)

2011-06-07 (#542)
- add LPPL licence to Uppersorbian patterns

2011-06-07 (#538)
- add LPPL licence to Welsh patterns

2011-06-06 (#528, #529)
- rename 8bit patterns: phyph-<lang>.tex -> hyph-<lang>.<enc>.tex

2011-06-06 (#527)
- add LPPL licence to Croatian patterns (and update author's email address)

2011-06-02 (#525)
- new version of German hyphenation patterns

2011-06-01 (#523, #524)
- load patterns for Latin and Cyrillic scripts for Serbian simultaneously

2011-01-19 (#515)
- merge exhyph-ru.tex and exhyph-uk.tex with dash-related patterns into main file
  (we might split them again if we decide to support all different encodings)

2011-01-19 (#514)
- add ASCII Greek and Coptic patterns for 8-bit engines into repository

== CTAN release 2011.01.13 ==

2011-01-11 (#512)
- remove the hack for OT1 encoding support for French and Danish patterns

2011-01-11 (#512)
- remove the hack for OT1 encoding support for French and Danish patterns

2011-01-10 (#510, #511)
- add Ethiopic full stop

2011-01-10 (#508)
- add plain version of Ethiopic patterns

2011-01-09 (#505, #506)
- add preliminary pan-Ethiopic patterns

2011-01-07 (#503)
- fix pattern loaders and comment out loading of zerohyph

2011-01-06 (#501)
- add support for pTeX

2010-10-20 (#489)
- replace Afrikaans patterns (by Tilla Fick and Chris Swanepoel)

== CTAN release ==

2010-09-18 (#450)
- add Afrikaans patterns (by Friedel Wolff); major revision needed

== CTAN release ==

2010-06-01 (#440)