@@ -24,6 +24,8 @@
     % Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
     \message{UTF-8 Afrikaans Hyphenation Patterns}
     \input hyph-af.tex
+    \lccode`\’=`\’
+    \input hyph-quote-af.tex
 \else
     % 8-bit engine (such as TeX or pdfTeX)
     \message{EC Afrikaans Hyphenation Patterns}
