@@ -23,6 +23,8 @@
     % Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
     \message{UTF-8 French hyphenation patterns (V2.12, 2002/12/11)}
     \input hyph-fr.tex
+    \lccode`\’=`\’
+    \input hyph-quote-fr.tex
 \else
     % 8-bit engine (such as TeX or pdfTeX)
     \message{EC French hyphenation patterns (V2.12, 2002/12/11)}
