@@ -17,4 +17,13 @@
 % ASCII patterns - no additional support is needed
 \message{ASCII Italian Hyphenation Patterns}
 \input hyph-it.tex
+% Test for pTeX
+\ifx\kanjiskip\undefined
+% Test for native UTF-8 (which gets only a single argument)
+% That's Tau (as in Taco or ΤΕΧ, Tau-Epsilon-Chi), a 2-byte UTF-8 character
+\def\testengine#1#2!{\def\secondarg{#2}}\testengine Τ!\relax
+\ifx\secondarg\empty
+    \lccode`\’=`\’
+    \input hyph-quote-it.tex
+\fi\fi
 \endgroup
