@@ -23,6 +23,8 @@
     % Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
     \message{UTF-8 Hyphenation patterns for unaccented pinyin syllables (CJK 4.8.0)}
     \input hyph-zh-latn.tex
+    \lccode`\’=`\’
+    \input hyph-quote-zh-latn.tex
 \else
     % 8-bit engine (such as TeX or pdfTeX)
     \message{EC Hyphenation patterns for unaccented pinyin syllables (CJK 4.8.0)}
