@@ -1,0 +1,9 @@
+\patterns{
+.af6ro’
+.a7fro’s
+.l’7etji
+.m’7etji
+.r’7etji
+s’9ie.
+x’9ie.
+}
