@@ -1,0 +1,31 @@
+\patterns{
+2’2
+2b’
+2ch’.
+2ch’’.
+2c’
+2d’
+2f’
+2g’
+2h’
+2j’
+2k’
+2l’.
+2l’’
+2m’
+2n’
+2p’
+2q’
+2r’
+2sh’
+4s’.
+4s’’
+2t’.
+2t’’
+2v’.
+2v’’
+2w’
+2x’
+2z’.
+2z’’
+}
