@@ -1,0 +1,5 @@
+\patterns{
+’1a
+’1e
+’1o
+}
